--- a/{{cookiecutter.repo_name}}/buildout.cfg
+++ b/{{cookiecutter.repo_name}}/buildout.cfg
@@ -89,6 +89,8 @@ FORCE_REWRITE        = True
 SETTINGS             = settings
 GID                  = www-data
 PORT                 = 8000
+FOUNDATION_VERSION   = 5.5
+COMPASS_VERISON      = 1.1
 
 [EXTRANET]
 HOST_URL             = http://your.extra.net/
